--- a/app/src/main/res/layout/trust_fragment.xml
+++ b/app/src/main/res/layout/trust_fragment.xml
@@ -8,6 +8,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
             android:text="@string/trusted_parties"
             android:textSize="30sp"/>
 
