--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
             android:id="@+id/action_identity"
-            android:enabled="true"
             android:title="@string/identity"
-            android:icon="@drawable/user_icon"
-            app:showAsAction="ifRoom"/>
+            android:icon="@drawable/user_icon"/>
     <item
             android:id="@+id/action_challenges"
-            android:enabled="true"
             android:title="@string/challenges"
-            android:icon="@drawable/challenge_icon"
-            app:showAsAction="ifRoom"/>
+            android:icon="@drawable/challenge_icon"/>
     <item
             android:id="@+id/action_trust"
-            android:enabled="true"
             android:title="@string/trusted_parties"
-            android:icon="@drawable/trusted_parties_icon"
-            app:showAsAction="ifRoom"/>
+            android:icon="@drawable/trusted_parties_icon"/>
 </menu>
