--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimaryLight">#BBDEFB</color>
+    <color name="colorAccent">#FF9800</color>
+    <color name="textColor">#212121</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="textColorSecondary">#757575</color>
+    <color name="iconColor">#FFFFFF</color>
+    <color name="colorDivider">#BDBDBD</color>
 
     <color name="background">#232328</color>
-    <color name="white">#FFFFFF</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#BDBDBD</color>
 </resources>
