--- a/app/src/main/res/layout/identity_fragment.xml
+++ b/app/src/main/res/layout/identity_fragment.xml
@@ -5,25 +5,40 @@
                 tools:context=".ui.fragment.IdentityFragment">
 
     <TextView
-        android:text="@string/wallet_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/tv_wallet_address_label"/>
+            android:text="@string/wallet_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/tv_wallet_address_label"/>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tv_wallet_address_label"
-        android:id="@+id/tv_wallet_address"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/tv_wallet_address_label"
+            android:id="@+id/tv_wallet_address"/>
+    <TextView
+            android:text="@string/unspent_output"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/tv_wallet_address"
+            android:id="@+id/tv_unspent_output_label"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/tv_unspent_output_label"
+            android:id="@+id/tv_unspent_output"/>
     <Button
-        android:text="@string/delete_identity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/btn_delete_identity"/>
+            android:text="@string/delete_identity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"
+            android:id="@+id/btn_delete_identity"/>
 </RelativeLayout>
