--- a/app/src/main/res/layout/identity_fragment.xml
+++ b/app/src/main/res/layout/identity_fragment.xml
@@ -2,45 +2,57 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 tools:context=".ui.fragment.IdentityFragment">
 
     <TextView
-            android:text="@string/wallet_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/tv_wallet_address_label"/>
+        android:text="@string/wallet_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/tv_wallet_address_label"/>
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/tv_wallet_address_label"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:id="@+id/tv_wallet_address"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/tv_wallet_address_label"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:id="@+id/tv_wallet_address"/>
     <TextView
-            android:text="@string/unspent_output"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/tv_wallet_address"
-            android:id="@+id/tv_unspent_output_label"/>
+        android:text="@string/unspent_output"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/tv_wallet_address"
+        android:id="@+id/tv_unspent_output_label"/>
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/tv_unspent_output_label"
-            android:id="@+id/tv_unspent_output"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/tv_unspent_output_label"
+        android:id="@+id/tv_unspent_output"/>
     <Button
-            android:text="@string/delete_wallet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp"
-            android:id="@+id/btn_delete_wallet"/>
+        android:text="@string/delete_wallet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/btn_delete_wallet"/>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        app:rippleColor="#ffffff"
+        android:id="@+id/btn_new_identity"/>
+
 </RelativeLayout>
