--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -4,17 +4,7 @@
                 android:layout_height="match_parent"
                 tools:context=".ui.fragment.IdentityFragment">
 
-    <TextView
-        android:text="@string/no_wallet_yet_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:layout_above="@id/tv_wallet_password"
-        android:id="@+id/no_wallet_yet_desc"/>
+
     <TextView
         android:text="@string/no_wallet_yet"
         android:textSize="24sp"
@@ -28,48 +18,63 @@
         android:gravity="center_horizontal"
         android:id="@+id/no_wallet_yet"/>
     <TextView
-        android:text="@string/password"
+        android:text="@string/no_wallet_yet_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:labelFor="@+id/et_wallet_password"
-        android:id="@+id/tv_wallet_password"/>
-    <EditText
+        android:layout_above="@id/password_wrapper"
+        android:gravity="center_horizontal"
+        android:id="@+id/no_wallet_yet_desc"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/password_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="32dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tv_wallet_password"
-        android:id="@+id/et_wallet_password"/>
-    <TextView
-        android:text="@string/password_confirm"
+        android:layout_centerVertical="true">
+        <EditText
+            android:id="@+id/et_wallet_password"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:ems="10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="@string/password"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/password_confirm_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/password_wrapper"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/et_wallet_password"
-        android:labelFor="@+id/et_wallet_password_confirm"
-        android:id="@+id/tv_wallet_password_confirm"/>
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_marginTop="5dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tv_wallet_password_confirm"
-        android:id="@+id/et_wallet_password_confirm"/>
+        android:layout_centerVertical="true">
+        <EditText
+            android:id="@+id/et_wallet_password_confirm"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:ems="10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="@string/password_confirm"/>
+    </android.support.design.widget.TextInputLayout>
+
     <Button
         android:text="@string/create_wallet_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/et_wallet_password_confirm"
+        android:layout_below="@+id/password_confirm_wrapper"
         android:id="@+id/btn_create_wallet"/>
     <ProgressBar
         style="?android:attr/progressBarStyle"
@@ -78,7 +83,7 @@
         android:visibility="invisible"
         android:layout_below="@+id/btn_create_wallet"
         android:layout_alignTop="@id/btn_create_wallet"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="32dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/pb_wallet_creation"/>
 
