Fix onClick listeners back to private. Hide keyboard and lose focus on EditText when clicking anywhere else (requires android:focusable(InTouchmode) in Layout)

--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -2,8 +2,9 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".ui.fragment.IdentityFragment">
-
+                tools:context=".ui.fragment.IdentityFragment"
+                android:focusable="true"
+                android:focusableInTouchMode ="true">
 
     <TextView
         android:text="@string/no_wallet_yet"
