--- a/app/src/main/res/layout/new_identity_fragment.xml
+++ b/app/src/main/res/layout/new_identity_fragment.xml
@@ -2,7 +2,9 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".ui.fragment.NewIdentityFragment">
+                tools:context=".ui.fragment.NewIdentityFragment"
+                android:focusable="true"
+                android:focusableInTouchMode ="true">
 
     <TextView
         android:text="@string/new_identity"
