Add EIR list to Identity fragment. Add EIR details fragment (when tapping on EIR list item). Redesign Identity fragment. Removed streams to support API v23.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="background">#232328</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#BDBDBD</color>
+    <color name="colorLightGray">#e0e0e0</color>
 </resources>
