--- a/app/src/main/res/layout/identity_fragment.xml
+++ b/app/src/main/res/layout/identity_fragment.xml
@@ -5,45 +5,53 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 tools:context=".ui.fragment.IdentityFragment">
 
-    <TextView
-        android:text="@string/wallet_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/tv_wallet_address_label"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tv_wallet_address_label"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:id="@+id/tv_wallet_address"/>
-    <TextView
-        android:text="@string/unspent_output"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tv_wallet_address"
-        android:id="@+id/tv_unspent_output_label"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tv_unspent_output_label"
-        android:id="@+id/tv_unspent_output"/>
-    <Button
-        android:text="@string/delete_wallet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/btn_delete_wallet"/>
+    <RelativeLayout android:layout_width="match_parent"
+                  android:layout_height="56dp"
+                  android:layout_gravity="start"
+                  android:background="@color/colorPrimary"
+                  android:id="@+id/header">
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="match_parent"
+                   android:src="@drawable/ic_account_balance_wallet_24dp"
+                   android:layout_marginLeft="12dp"
+                   android:layout_alignParentLeft="true"
+                   android:paddingTop="10dp"
+                   android:paddingBottom="10dp"
+                   android:layout_gravity="center_vertical"
+                   android:id="@+id/iv_wallet"
+        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            android:textColor="@color/colorLightGray"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:gravity="center_vertical"
+            android:layout_toRightOf="@id/iv_wallet"
+            android:layout_toLeftOf="@id/iv_wallet_copy"
+            android:id="@+id/tv_unspent_output"/>
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="match_parent"
+                   android:src="@drawable/ic_content_copy_24dp"
+                   android:layout_marginRight="12dp"
+                   android:paddingTop="10dp"
+                   android:paddingBottom="10dp"
+                   android:layout_alignParentRight="true"
+                   android:id="@+id/iv_wallet_copy"/>
+
+    </RelativeLayout>
+
+    <ListView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_below="@id/header"
+        android:id="@+id/lv_eirs">
+    </ListView>
+
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
