--- a/app/src/main/res/layout/list_item_eir.xml
+++ b/app/src/main/res/layout/list_item_eir.xml
@@ -4,14 +4,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:gravity="left|center"
-            android:textSize="18sp"
-            tools:text="Title"
-            android:id="@+id/eir_alias"/>
+    <TextView
+        android:id="@+id/eir_alias"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:gravity="left|center"
+        android:textSize="18sp"
+        tools:text="Title"/>
 
 </RelativeLayout>
