--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -4,88 +4,87 @@
                 android:layout_height="match_parent"
                 tools:context=".ui.fragment.IdentityFragment"
                 android:focusable="true"
-                android:focusableInTouchMode ="true">
+                android:focusableInTouchMode="true">
 
     <TextView
-        android:text="@string/no_wallet_yet"
-        android:textSize="24sp"
+        android:id="@+id/no_wallet_yet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_centerHorizontal="true"
         android:layout_above="@id/no_wallet_yet_desc"
-        android:gravity="center_horizontal"
-        android:id="@+id/no_wallet_yet"/>
-    <TextView
-        android:text="@string/no_wallet_yet_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/password_wrapper"
+        android:layout_marginBottom="24dp"
         android:gravity="center_horizontal"
-        android:id="@+id/no_wallet_yet_desc"/>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_wrapper"
+        android:textSize="24sp"
+        android:text="@string/no_wallet_yet"/>
+    <TextView
+        android:id="@+id/no_wallet_yet_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_above="@id/password_wrapper"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center_horizontal"
+        android:text="@string/no_wallet_yet_desc"/>
+
+    <android.support.design.widget.TextInputLayout android:id="@+id/password_wrapper"
+                                                   android:layout_width="wrap_content"
+                                                   android:layout_height="wrap_content"
+                                                   android:layout_centerVertical="true"
+                                                   android:layout_centerHorizontal="true"
+                                                   android:layout_marginTop="32dp">
         <EditText
             android:id="@+id/et_wallet_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:ems="10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:ems="10"
             android:hint="@string/password"/>
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_confirm_wrapper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_below="@id/password_wrapper"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+    <android.support.design.widget.TextInputLayout android:id="@+id/password_confirm_wrapper"
+                                                   android:layout_width="wrap_content"
+                                                   android:layout_height="wrap_content"
+                                                   android:layout_below="@id/password_wrapper"
+                                                   android:layout_centerVertical="true"
+                                                   android:layout_centerHorizontal="true"
+                                                   android:layout_marginTop="16dp">
         <EditText
             android:id="@+id/et_wallet_password_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:ems="10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:ems="10"
             android:hint="@string/password_confirm"/>
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:text="@string/create_wallet_button"
+        android:id="@+id/btn_create_wallet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/password_confirm_wrapper"
-        android:id="@+id/btn_create_wallet"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:text="@string/create_wallet_button"/>
+
     <ProgressBar
         style="?android:attr/progressBarStyle"
+        android:id="@+id/pb_wallet_creation"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         android:layout_below="@+id/btn_create_wallet"
         android:layout_alignTop="@id/btn_create_wallet"
-        android:layout_marginEnd="32dp"
         android:layout_centerHorizontal="true"
-        android:id="@+id/pb_wallet_creation"/>
+        android:layout_marginEnd="32dp"/>
 
 </RelativeLayout>
