--- a/app/src/main/res/layout/list_item_eir.xml
+++ b/app/src/main/res/layout/list_item_eir.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/eir_alias"
@@ -12,6 +12,23 @@
         android:layout_marginRight="24dp"
         android:gravity="left|center"
         android:textSize="18sp"
-        tools:text="Title"/>
+        tools:text="Title" />
+
+    <TextView
+        android:id="@+id/eir_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/eir_alias"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="2dp"
+        android:gravity="left|center"
+        android:padding="2dip"
+        android:textColor="#736F6E"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        tools:text="Status" />
 
 </RelativeLayout>
