WIP initial version of sending CR-s UI

--- a/app/src/main/res/layout/challenge_fragment.xml
+++ b/app/src/main/res/layout/challenge_fragment.xml
@@ -1,15 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".ui.fragment.IdentityFragment">
 
-    <TextView
+    <ListView
+        android:id="@+id/lv_challenges"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_new_challenge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:textSize="30sp"
-        android:text="@string/challenges"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        app:rippleColor="#ffffff"
+        android:src="@drawable/ic_send_24dp"/>
 
 </RelativeLayout>
