Disallow sending challenges when no mined EIR-s exist. Use toString to adapt mined EIRs into verifier Spinner.

--- a/app/src/main/res/values/errors.xml
+++ b/app/src/main/res/values/errors.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="missing_value">Missing value</string>
+    <string name="missing_identities_for_challenge">You need to have at least one Identity mined to send a challenge</string>
 </resources>
