--- a/app/src/main/res/layout/new_challenge_fragment.xml
+++ b/app/src/main/res/layout/new_challenge_fragment.xml
@@ -38,12 +38,24 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="16dp"
+        android:spinnerMode="dialog"
         android:prompt="@string/your_identity"/>
+
+    <Spinner
+        android:id="@+id/s_challenge_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/s_eir_verifier"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="16dp"
+        android:spinnerMode="dialog"
+        android:prompt="@string/challenge_type"/>
 
     <android.support.design.widget.TextInputLayout android:id="@+id/targetWrapper"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
-                                                   android:layout_below="@id/s_eir_verifier"
+                                                   android:layout_below="@id/s_challenge_type"
                                                    android:layout_marginTop="16dp">
         <EditText
             android:id="@+id/et_eir_target"
