--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,11 @@
     <color name="colorAccent">#FF9800</color>
     <color name="textColor">#212121</color>
     <color name="textColorPrimary">#FFFFFF</color>
-    <color name="textColorSecondary">#757575</color>
+    <color name="textColorSecondary">#6D6D6D</color>
+
     <color name="iconColor">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
+    <color name="bottomLine">#8A8A8A</color>
 
     <color name="background">#232328</color>
     <color name="colorWhite">#FFFFFF</color>
