Initial code populating CR-s list for specific EIR. Update ListItem style.

--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/eir_alias"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
+        android:layout_marginTop="16dp"
+        android:paddingBottom="4dp"
         android:gravity="left|center"
-        android:textSize="18sp"
-        tools:text="Title" />
+        android:textSize="18sp"/>
 
     <TextView
-        android:id="@+id/eir_status"
+        android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tv_title"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/eir_alias"
-        android:layout_marginBottom="2dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="16dp"
+        android:padding="2dp"
         android:gravity="left|center"
-        android:padding="2dip"
-        android:textColor="#736F6E"
         android:textSize="12sp"
         android:textStyle="bold"
-        tools:text="Status" />
-
+        android:textColor="@color/textColorSecondary"/>
 </RelativeLayout>
